--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -19,7 +19,7 @@
                         {{total_items}} item{{total_items|pluralize}}
                         ${{cart.get_total_price}}
                     </a>
-                {% else %}
+                {% elif not order %}
                 <a href="{% url "cart:cart_detail" %}">Cart is empty</a>
                 {% endif %}
                 {% endwith %}
